--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <main id="conteiner">
+        <section class="postagem">
+           <p>Fases Uma <strong>mulher</strong>, refém de paixões rasas,vivendo em dependência de sí, escrava de suas emoções, prisioneira de seus erros,uma mulher,uma mulher que se esconde atrás dos cabelos e o batom cor marrom, uma mulher de olhos fortes,mas que se limita há olhar,encontra-se em dois mundos,da bom noção competindo com o caos, uma mulher que sentiu o cheiro do pecado do perverso e sentiu prazer, está presa ao ritmo de vingança pelo o que acontera a ti, está sobre comando do automático ligado em vários modos,camufla sua tristeza e abre seu sorrisoA história de uma mulher que ainda é uma menina, está presa em suas emoções e refém de seu temperamento. Ela quer voar e vai voar, nada pode impedi-la de se transformar,como a borboleta gravada em seu ombro, ela vai voar,e ficará para trás toda casca,uma nova fase para a mulher de temperamento escondida nos medos.
+           </p> 
+          <footer> &copy;Escrito por Amanda de oliveira cauneto<br>
+          editado por patrick marquezine</footer>
+        </section>
+      </main>
+      <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
