--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog pessoal</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/dd82567ff5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main id="conteiner">
+        <input type="checkbox" name="check" id="check">
+        <div class="sidebar">
+            <label for="check"> <i class="fas fa-bars"></i></label>
+        </div>
         <section class="postagem">
            <p>Fases Uma <strong>mulher</strong>, refém de paixões rasas,vivendo em dependência de sí, escrava de suas emoções, prisioneira de seus erros,uma mulher,uma mulher que se esconde atrás dos cabelos e o batom cor marrom, uma mulher de olhos fortes,mas que se limita há olhar,encontra-se em dois mundos,da bom noção competindo com o caos, uma mulher que sentiu o cheiro do pecado do perverso e sentiu prazer, está presa ao ritmo de vingança pelo o que acontera a ti, está sobre comando do automático ligado em vários modos,camufla sua tristeza e abre seu sorrisoA história de uma mulher que ainda é uma menina, está presa em suas emoções e refém de seu temperamento. Ela quer voar e vai voar, nada pode impedi-la de se transformar,como a borboleta gravada em seu ombro, ela vai voar,e ficará para trás toda casca,uma nova fase para a mulher de temperamento escondida nos medos.
            </p> 
-          <footer> &copy;Escrito por Amanda de oliveira cauneto<br>
+          <footer class="rodape"> &copy;Escrito por Amanda de oliveira cauneto<br>
           editado por patrick marquezine</footer>
         </section>
       </main>
