--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/dd82567ff5.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="change()">
     <main id="conteiner">
         <section id="top-bar">
           <input type="checkbox" name="check" id="check">
@@ -23,6 +23,6 @@
           editado por patrick marquezine</footer>
         </section>
       </main>
-      <script type="text/javascript" src="script.js"></script>
+      <script type="text/javascript" src="scripts/script.js"></script>
 </body>
 </html>
