--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <main id="conteiner">
         <section id="top-bar">
           <input type="checkbox" name="check" id="check">
-           <div class="sidebar">
-            <label for="check"> <i class="fas fa-bars"></i></label>
+          <label for="check"> <i class="fas fa-bars" id="menu"></i></label> 
+          <div class="sidebar">
+          
+            <ul>
+              <li><a href="index.html">pagina inicial</a></li>
+              <li><a href="login.html">login</a></li>
+              <li><a href="sobre.html">sobre-nós</a></li>
+              <li><a href="fotos.html">fotos</a></li>
+            </ul>
            </div>
         </section>
         <section class="postagem">
