--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
               <li><a href="index.html">pagina inicial</a></li>
               <li><a href="login.html">login</a></li>
-              <li><a href="sobre.html">sobre-nós</a></li>
+              <li><a href="sobre.html">sobre nós</a></li>
               <li><a href="fotos.html">fotos</a></li>
             </ul>
            </div>
