--- a/login.html
+++ b/login.html
@@ -11,16 +11,43 @@
         main#conteudo{
             display: flex;
             flex-direction: column;
+            
         }
         div.formulario{
-            display: flex;
             box-shadow: 2px 2px 4px #000000;
+            margin: auto;
+            padding: 20px;
+            top: 50px;
+            position: relative;
+            width: 40%;
+        }
+        div.formulario form{
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            padding: auto;
+        }
+        span{
+            font-size: 8pt;
+        }
+        input{
+            outline: none;
+            border: none;
+            border-bottom: 2px solid black;
+            margin-bottom: 5px;
+            transition: all .2s ease;
+        }
+        input:last-child{
+            border-bottom: none;
+        }
+        input:focus{
+            border-bottom: 2px solid #eca582;
         }
 
     </style>
 </head>
 <body>
-    <main id="conteudo">
+    <main id="conteiner">
     <section id="top-bar">
         <input type="checkbox" name="check" id="check">
         <label for="check"> <i class="fas fa-bars" id="menu"></i></label> 
@@ -36,7 +63,7 @@
       </section>
       <div class="formulario">
         <form action="index.html">
-            <p>acesse sua conta ou <a href="registrar-se.html">crie uma aqui</a></p>
+            <p>acesse sua conta <br>ou <a href="registrar-se.html">crie uma aqui</a></p>
             <label for="email"> E-mail</label>
             <input type="email" id="email" placeholder="exemplo123@gmail.com">
             <label for="senha">senha</label>
