--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <li><a href="index.html">pagina inicial</a></li>
               <li><a href="login.html">login</a></li>
               <li><a href="sobre.html">sobre nós</a></li>
-              <li><a href="fotos.html">fotos</a></li>
+              <li><a href="fotos.html">Livros</a></li>
             </ul>
            </div>
         </section>
