--- a/index.html
+++ b/index.html
@@ -9,19 +9,15 @@
     <script src="https://kit.fontawesome.com/dd82567ff5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <main id="conteiner">
-        <section id="top-bar">
           <input type="checkbox" name="check" id="check">
-          <label for="check"> <i class="fas fa-bars" id="menu"></i></label> 
-          <div class="sidebar">
-          
+  <section id="menu">
+   <label for="check"> <i class="fas fa-bars" id="icone"></i></label> 
             <ul>
               <li><a href="index.html">pagina inicial</a></li>
               <li><a href="login.html">login</a></li>
               <li><a href="sobre.html">sobre nós</a></li>
               <li><a href="fotos.html">Livros</a></li>
             </ul>
-           </div>
         </section>
         <section class="postagem">
            <p>Fases Uma <strong>mulher</strong>, refém de paixões rasas,vivendo em dependência de sí, escrava de suas emoções, prisioneira de seus erros,uma mulher,uma mulher que se esconde atrás dos cabelos e o batom cor marrom, uma mulher de olhos fortes,mas que se limita há olhar,encontra-se em dois mundos,da bom noção competindo com o caos, uma mulher que sentiu o cheiro do pecado do perverso e sentiu prazer, está presa ao ritmo de vingança pelo o que acontera a ti, está sobre comando do automático ligado em vários modos,camufla sua tristeza e abre seu sorrisoA história de uma mulher que ainda é uma menina, está presa em suas emoções e refém de seu temperamento. Ela quer voar e vai voar, nada pode impedi-la de se transformar,como a borboleta gravada em seu ombro, ela vai voar,e ficará para trás toda casca,uma nova fase para a mulher de temperamento escondida nos medos.
@@ -30,7 +26,6 @@
         </section>
         <footer class="rodape"> &copy;Escrito por Amanda de oliveira cauneto<br>
           editado por patrick marquezine</footer>
-      </main>
       <script type="text/javascript" src="scripts/script.js"></script>
 </body>
 </html>
