--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
           <input type="checkbox" name="check" id="check">
   <section id="menu">
+    <span class="menu">Menu</span>
    <label for="check"> <i class="fas fa-bars" id="icone"></i></label> 
             <ul>
               <li><a href="index.html">pagina inicial</a></li>
